--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 					<section data-markdown>
 						<script type="text/template">
 							<h6>api测试</h6>
-							<p>工具: jest-mock-fetch,用于测试fech mock的包</p>
+							<p>工具: jest-mock-fetch,用于测试fetch mock的包</p>
 							```
 							function fetchItem(params){
 								return  FetchUtils.fetchGet(`/url/${params.id}`)
