--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<a target='_blank' href='http://stylus-lang.com/'>官网</a>
 						<a target='_blank' href='https://stylus.comptechs.cn/'>中文网</a>
 					</p>
-					scss和less写法类似，sass和stylus写法类似
+					scss和less写法类似，sass和stylus写法类似,stylus除了可以像sass一样省略大括号和分号，甚至还可以省略冒号
 					都遵循DRY原则(Don’t-Repeat-Yourself)
 				</section>
 				<section>
