--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 						<a target='_blank' href='https://stylus.comptechs.cn/'>中文网</a>
 					</p>
 					scss和less写法类似，sass和stylus写法类似,stylus除了可以像sass一样省略大括号和分号，甚至还可以省略冒号
+					scss 和 css 写法无差别，这也是 sass 后来越来越受大众喜欢原因之一。scss向后兼容，可以把现有的“.css”文件直接修改成“.scss”即可使用。
 					都遵循DRY原则(Don’t-Repeat-Yourself)
 				</section>
 				<section>
