--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 				</section>
 				<section>
 					<img src="./images/less/bezier.webp"/>
+					<a target='_blank' href='https://www.w3school.com.cn/cssref/pr_transition-timing-function.asp'>css3</a>
 				</section>
 				<section>
 					<img src="./images/less/2.gif"/>
